--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.3",
+    "axios": "^1.4.0",
     "fp-ts": "^2.14.0",
-    "node-fetch": "^3.3.1",
     "untildify": "^4.0.0",
     "zod": "^3.21.4"
   },
